--- a/.tas.yml
+++ b/.tas.yml
@@ -1,13 +1,19 @@
 ---
-framework: "jest"
+framework: jest
+licenseTier: xsmall
 postMerge:
   pattern:
     - "./test/**/*.ts"
+  strategy:
+    threshold: <5|100s|30m|6h>
+    type: <commit|time>
 preMerge:
   pattern:
     - "./test/**/*.ts"
 preRun:
-  - npm install
+     command:
+        - npm install
 postRun:
-  - node --version
-version: 2.0
+     command:
+        - node --version
+version: 2.1
