add missing test file pattern

--- a/.tas.yml
+++ b/.tas.yml
@@ -3,18 +3,19 @@ framework: jest
 licenseTier: xsmall
 postMerge:
   pattern:
-    - "./test/**/*.ts"
-    - "./test/*.ts"
+    - "./test/utils/*.spec.ts"
+    - "./test/*.spec.ts"
   strategy:
     threshold: <5|100s|30m|6h>
     type: <commit|time>
 preMerge:
   pattern:
-    - "./test/**/*.ts"
-    - "./test/*.ts"
+    - "./test/utils/*.spec.ts"
+    - "./test/*.spec.ts"
 preRun:
      command:
         - npm install
+        - npm run build
 postRun:
      command:
         - node --version
